--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8">
 <title>Life Crises</title>
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://code.getmdl.io/1.2.0/material.indigo-pink.min.css">
+<script defer src="https://code.getmdl.io/1.2.0/material.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <script>
 
 function zeroPad(aNumber) {
@@ -153,6 +158,7 @@ crises_sorted.sort(function(a, b) {
 </head>
 
 <body onload="getLifeCrises()">
+<div align="center">
   <h1>Life crises</h1>
     <!-- Input birthday form -->
   <div>
@@ -164,10 +170,10 @@ crises_sorted.sort(function(a, b) {
   
   <div>
     <!-- Output here -->
-    <p>Life crises dates will update on changes:</p>
-    <table id='crises'></p>
+    <p>Crisis dates will update on changes:</p>
+    <table id='crises' class="mdl-data-table mdl-js-data-table"></table></p>
   </div>
-  
+</div>
 
 </body>
 </html>
