--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ function getPrettyTimeDelta(delta_ms) {
     msg = 'Passed ' + msg + ' ago';
   }
   else {
-    msg = msg + ' to go;
+    msg += ' to go';
   }
   return msg;
 }
