fix timezone in datetime-local input entry

--- a/index.html
+++ b/index.html
@@ -201,7 +201,6 @@ function setUpCrises() {
   }, 1000);
 }
 
-// TODO : Remove unused
 function simpleDateString(_date) {
   return (_date.getFullYear() + "-" + zeroPad(_date.getMonth()+1) + "-" + 
     zeroPad(_date.getDate()) + "T" +zeroPad(_date.getHours()) + ":" +
@@ -213,12 +212,11 @@ function checkPassedURLParam() {
   // Set our initial dob to that.
   if (window.location.search.startsWith('?dob=')) {
    var dob = new Date(window.location.search.substring(5));
-   dob = new Date(dob.getTime());
    console.log(dob)
 
    if (!isNaN(dob.valueOf())) {
     // Valid date passed in URL param, update form
-    document.getElementById("bday").value = dob.toISOString().substring(0,16);
+    document.getElementById("bday").value = simpleDateString(dob);
    }
   }
 }
