nit: add hours back

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ function getPrettyTimeDelta(delta_ms) {
   if (delta[1] != 0) {
     parts.push(delta[1] + ' days');
   }
-  if (delta[2] != 0 && delta[0] == 0) {
+  if (delta[2] != 0) {
     parts.push(delta[2] + ' hours');
   }
   if (delta[3] != 0) {
