Add link to SSA acturial table

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div>
-      <p><span>Expected life span: <age id="lifespan"></age></span></p>
+      <p><a href="https://www.ssa.gov/oact/STATS/table4c6.html">Expected life span</a> for a <span id="lifespan"></span></p>
       <table class="mdl-data-table mdl-js-data-table">
         <thead>
           <tr>
