medium font size

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <script defer src="https://code.getmdl.io/1.2.0/material.min.js"></script>
   <script defer src="lifecrises.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    td {
+      font-size: medium;
+    }
+  </style>
 </head>
 
 <body onload="setUpCrises()">
@@ -29,7 +34,8 @@
     </div>
 
     <div>
-      <p><a href="https://www.ssa.gov/oact/STATS/table4c6.html">Expected life span</a> for a <span id="lifespan"></span></p>
+      <p><a href="https://www.ssa.gov/oact/STATS/table4c6.html">Expected life span</a> for a <span id="lifespan"></span>
+      </p>
       <table class="mdl-data-table mdl-js-data-table">
         <thead>
           <tr>
